# TestInlineHook

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/o/w/testinlinehook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/hook/: logger.h  relocate.cpp  relocate.h  test_inline_hook.cpp  test_jni.cpp
app/src/main/java/o/w/testinlinehook/: MainActivity.java  TestInlineHook.java  TestJni.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/o/w/testinlinehook/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
